tests/rosetta/out/Smalltalk/archimedean-spiral.out
/workspace/mochi/tests/rosetta/out/Smalltalk/archimedean-spiral.st:10: parse error, expected integer literal or floating-point literal or decimal literal
